# Drogo

./: .breakpoints  .gitignore  README.md  bot_token.py  campaign_participation.txt  campaigns.txt  character_data.json  main.py  pyproject.toml
.cache/replit/: __replit_disk_meta.json
.cache/replit/nix/: env.json
.upm/: store.json
categories/: item_homebrew.txt  monster_homebrew.txt  remembered_data.txt
character/: classes.py  races.py
items/: adventuregear.py  armor.py  weapons.py
monsters/: monsters.py
selectmenubuttons/: selectmenu.py
